[project]
name = "langgraph-mcp-playground"
version = "0.1.0"
description = "Learning project for building AI agents with LangGraph, MCP, Ollama, and Langfuse."
readme = "README.md"
authors = [
    { name = "Piyush Sinha", email = "piyush_sinha89@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
langgraph-mcp-playground = "langgraph_mcp_playground:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
